MDL-25544 MDL-26658 gradereport_grader: Fix floating bottom footer when scrollbar is visible

--- a/grade/report/grader/styles.css
+++ b/grade/report/grader/styles.css
@@ -144,6 +144,7 @@
 #gradebook-footer-container.gradebook-footer-row-sticky {
     background-color: #444;
     display: block;
+    border-bottom: 0px solid #444;
 }
 
 .gradebook-footer-cell:first-child,
